--- a/Assets/css/Style.css
+++ b/Assets/css/Style.css
@@ -130,7 +130,7 @@ body {
 }
 
 .section-one {
-  margin-top: -1em;
+  margin: -1em 0 4em;
 }
 
 .section-one .col {
@@ -143,38 +143,37 @@ body {
 }
 
 .section-one .col--facebook {
-  border: 3px solid #4267b2;
+  border: 4px solid #4267b2;
   border-radius: 20px;
 }
 
 .section-one .col--instagram {
-  border-top: 3px solid transparent;
   background-clip: padding-box;
   border-radius: 20px;
   position: relative;
 }
 
 .section-one .col--instagram:before {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
   z-index: -1;
-  margin: -3px;
+  margin: -4px;
   border-radius: inherit;
   background: -webkit-gradient(linear, left top, right bottom, from(#405de6), color-stop(#5851db), color-stop(#833ab4), color-stop(#c13584), color-stop(#e1306c), color-stop(#fd1d1d), color-stop(#f56040), color-stop(#f77737), color-stop(#fcaf45), to(#ffdc80));
   background: linear-gradient(to bottom right, #405de6, #5851db, #833ab4, #c13584, #e1306c, #fd1d1d, #f56040, #f77737, #fcaf45, #ffdc80);
 }
 
 .section-one .col--twitter {
-  border: 3px solid #1da1f2;
+  border: 4px solid #1da1f2;
   border-radius: 20px;
 }
 
 .section-one .col--youTube {
-  border: 3px solid #ff0000;
+  border: 4px solid #ff0000;
   border-radius: 20px;
 }
 
@@ -206,7 +205,23 @@ body {
   font-weight: 700;
 }
 
+.section-one .col__follow img {
+  height: 0.5em;
+}
+
 .section-one .col__follow--down {
   color: #d42c2c;
+}
+
+.section-Two {
+  border: 1px solid violet;
+}
+
+.section-Two__header {
+  margin-bottom: 1em;
+}
+
+.section-Two__header h2 {
+  font-size: var(--f-size-small);
 }
 /*# sourceMappingURL=Style.css.map */
