--- a/Assets/css/Style.css
+++ b/Assets/css/Style.css
@@ -5,6 +5,10 @@
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 html {
@@ -26,8 +30,10 @@ html {
   );
   --f-size-verySmall: 1.5rem;
   --f-size-small: 2.5rem;
-  --f-size-medium: 4rem;
+  --f-size-medium: 2.7rem;
+  --f-size-x-medium: 3.2rem;
   --f-size-large: 6rem;
+  --f-size-X-large: 6.8rem;
 }
 
 .darkTheme {
@@ -47,6 +53,19 @@ body {
 .container {
   width: 95%;
   margin: 0 auto;
+  max-width: 600px;
+}
+
+@media screen and (min-width: 900px) {
+  .container {
+    max-width: 1000px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .container {
+    max-width: 1660px;
+  }
 }
 
 .header {
@@ -62,9 +81,16 @@ body {
 .header__title h1 {
   color: var(--clr-header);
   margin-bottom: 0.5em;
-  font-size: var(--f-size-small);
+  font-size: var(--f-size-medium);
   font-weight: 900;
   font-style: italic;
+}
+
+@media screen and (min-width: 900px) {
+  .header__title h1 {
+    font-size: var(--f-size-X-large);
+    margin-bottom: 0.2em;
+  }
 }
 
 .header__title p {
@@ -75,10 +101,23 @@ body {
   margin-bottom: 2em;
 }
 
+@media screen and (min-width: 900px) {
+  .header__title p {
+    font-size: 1.5rem;
+    margin-left: 0.7em;
+  }
+}
+
 .header__toggler {
   position: relative;
-  padding-bottom: 2em;
+  padding-bottom: 3.5em;
   margin-top: 3em;
+}
+
+@media screen and (min-width: 900px) {
+  .header__toggler {
+    margin-top: 4em;
+  }
 }
 
 .header__toggler label {
@@ -86,6 +125,12 @@ body {
   font-size: 1.5rem;
   font-weight: 700;
   padding-left: 0.5em;
+}
+
+@media screen and (min-width: 900px) {
+  .header__toggler label {
+    font-size: var(--f-size-small);
+  }
 }
 
 .header__toggler input {
@@ -118,8 +163,8 @@ body {
   left: 0;
   background-color: var(--clr-BG);
   border-radius: 50%;
-  -webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
-          box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.8);
+          box-shadow: 0 2px 5px rgba(0, 0, 0, 0.8);
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
 }
@@ -127,10 +172,29 @@ body {
 .header__toggler input:checked::before {
   left: 40px;
   background-color: #1e202a;
+  -webkit-box-shadow: 2px 2px 10px #378fe6, 2px 2px 20px #3eda82;
+          box-shadow: 2px 2px 10px #378fe6, 2px 2px 20px #3eda82;
 }
 
 .section-one {
   margin: -1em 0 4em;
+}
+
+@media screen and (min-width: 900px) {
+  .section-one {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 2fr 2fr;
+        grid-template-columns: 2fr 2fr;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .section-one {
+    -ms-grid-columns: (2fr)[4];
+        grid-template-columns: repeat(4, 2fr);
+    margin-top: 2em;
+  }
 }
 
 .section-one .col {
@@ -173,30 +237,52 @@ body {
 }
 
 .section-one .col--youTube {
-  border: 4px solid #ff0000;
+  border: 4px solid #ff000096;
   border-radius: 20px;
 }
 
 .section-one .col__title {
-  font-size: 1.5rem;
+  font-size: var(--f-size-verySmall);
   margin: 1.2em 0;
+  color: var(--clr-text);
+  font-weight: 700;
+}
+
+@media screen and (min-width: 900px) {
+  .section-one .col__title {
+    font-size: var(--f-size-verySmall);
+  }
 }
 
 .section-one .col__title img {
   vertical-align: middle;
 }
 
+@media screen and (min-width: 900px) {
+  .section-one .col__title img {
+    width: 4rem;
+    margin-right: 0.4em;
+  }
+}
+
 .section-one .col__number {
   font-size: var(--f-size-large);
+  color: var(--clr-header);
 }
 
 .section-one .col__number span {
   display: block;
-  font-size: 1.5rem;
+  font-size: var(--f-size-verySmall);
   font-weight: 400;
   letter-spacing: 0.5em;
   color: var(--clr-text);
-  margin-bottom: 2em;
+  margin: 0.5em 0 2em 0.7em;
+}
+
+@media screen and (min-width: 900px) {
+  .section-one .col__number span {
+    font-weight: 700;
+  }
 }
 
 .section-one .col__follow {
@@ -210,18 +296,122 @@ body {
 }
 
 .section-one .col__follow--down {
-  color: #d42c2c;
-}
-
-.section-Two {
-  border: 1px solid violet;
+  color: #ff000096;
 }
 
 .section-Two__header {
-  margin-bottom: 1em;
+  margin-bottom: 3em;
+  padding-left: 1em;
 }
 
 .section-Two__header h2 {
   font-size: var(--f-size-small);
+  color: var(--clr-header);
+}
+
+@media screen and (min-width: 900px) {
+  .section-Two__header h2 {
+    font-size: var(--f-size-medium);
+    margin-bottom: 0.8em;
+    padding-bottom: 0.5em;
+    border-bottom: 1px solid var(--clr-text);
+    width: 25rem;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .section-Two__header h2 {
+    font-size: var(--f-size-x-medium);
+    width: 30rem;
+  }
+}
+
+.section-Two .statistics {
+  padding-left: 1em;
+  margin: 0 auto;
+}
+
+@media screen and (min-width: 900px) {
+  .section-Two .statistics {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (2fr)[2];
+        grid-template-columns: repeat(2, 2fr);
+    -webkit-column-gap: 2em;
+            column-gap: 2em;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .section-Two .statistics {
+    -ms-grid-columns: (2fr)[4];
+        grid-template-columns: repeat(4, 2fr);
+  }
+}
+
+.section-Two .statistics .col {
+  background-color: var(--clr-cardBg);
+  margin-bottom: 2em;
+  padding: 1em 3em;
+  border-radius: 0.5rem;
+  -webkit-box-shadow: 0.2em 0.3em 0.8em rgba(0, 0, 0, 0.8);
+          box-shadow: 0.2em 0.3em 0.8em rgba(0, 0, 0, 0.8);
+}
+
+.section-Two .statistics .col .partOne,
+.section-Two .statistics .col .partTwo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row nowrap;
+          flex-flow: row nowrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+}
+
+.section-Two .statistics .col .partOne {
+  padding: 2em 0;
+}
+
+.section-Two .statistics .col .partOne__title {
+  font-size: var(--f-size-small);
+  font-weight: 700;
+  color: var(--clr-text);
+}
+
+.section-Two .statistics .col .partOne__icon {
+  -ms-flex-item-align: baseline;
+      align-self: baseline;
+}
+
+.section-Two .statistics .col .partOne__icon img {
+  vertical-align: baseline;
+  width: var(--f-size-medium);
+}
+
+.section-Two .statistics .col .partTwo__statistics {
+  font-size: var(--f-size-large);
+  font-weight: 700;
+  color: var(--clr-header);
+}
+
+.section-Two .statistics .col .partTwo__percentage {
+  font-size: var(--f-size-verySmall);
+  color: #2aac2a;
+  font-weight: 700;
+}
+
+.section-Two .statistics .col .partTwo__percentage img {
+  height: 0.5em;
+}
+
+.section-Two .statistics .col .partTwo__percentage--down {
+  color: #ff000096;
 }
 /*# sourceMappingURL=Style.css.map */
